weird deloyment issue with editor overlapping canvas

--- a/src/App.css
+++ b/src/App.css
@@ -203,8 +203,6 @@ li:hover {
 
 .journal{
   position: absolute;
-  width:90%;
-  border: #0D6560 solid 2px;
 }
 
 .cal{
